hotfix(update documentation)
